// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SavePopup should render with Add Note when noteId is empty 1`] = `
<div>
  <div
    class="cds--layer-one cds--modal cds--modal-tall is-visible next-ui ot-notes-popup"
    role="presentation"
  >
    <span
      class="cds--visually-hidden"
      role="link"
      tabindex="0"
    >
      Focus sentinel
    </span>
    <div
      aria-modal="true"
      class="cds--modal-container"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="cds--modal-header"
      >
        <h2
          class="cds--modal-header__heading"
          dir="auto"
          id="cds--modal-header__heading--modal-id-:r1:"
        >
          Add Note
        </h2>
        <div
          class="cds--modal-close-button"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-label="Close"
                aria-labelledby="tooltip-:r3:"
                class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="cds--modal-close__icon"
                  fill="currentColor"
                  focusable="false"
                  height="20"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-:r3:"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Close
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
        id="cds--modal-body--modal-id-:r1:"
      >
        <div
          class="cds--form-item"
        >
          <div
            class="cds--text-area__label-wrapper"
          >
            <label
              class="cds--label"
              dir="auto"
            >
              Notes
            </label>
          </div>
          <div
            class="cds--text-area__wrapper"
          >
            <textarea
              aria-invalid="false"
              class="cds--text-area"
              placeholder="Enter a maximum of 150 characters"
              rows="4"
              style="width: 100%;"
            />
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-area__counter-alert"
              role="alert"
            />
          </div>
        </div>
        <div
          style="height: 20px;"
        />
        <div
          class="date-range"
        >
          <div>
            <div
              class="cds--form-item"
            >
              <div
                class="cds--date-picker cds--date-picker--single"
              >
                <div
                  class="cds--date-picker-container"
                >
                  <label
                    class="cds--label"
                    dir="auto"
                    for="date-picker-input-id-start"
                  >
                    Start date
                  </label>
                  <div
                    class="cds--date-picker-input__wrapper"
                  >
                    <span>
                      <input
                        class="cds--date-picker__input cds--date-picker__input--md flatpickr-input"
                        id="date-picker-input-id-start"
                        pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                        placeholder="dd/mm/yyyy"
                        type="text"
                      />
                      <svg
                        aria-hidden="true"
                        class="cds--date-picker__icon"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="height: 20px;"
            />
          </div>
          <div>
            <div
              class="cds--form-item"
            >
              <div
                class="cds--date-picker cds--date-picker--single"
              >
                <div
                  class="cds--date-picker-container"
                >
                  <label
                    class="cds--label"
                    dir="auto"
                    for="date-picker-input-id-finish"
                  >
                    End date
                  </label>
                  <div
                    class="cds--date-picker-input__wrapper"
                  >
                    <span>
                      <input
                        class="cds--date-picker__input cds--date-picker__input--md flatpickr-input"
                        id="date-picker-input-id-finish"
                        pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                        placeholder="dd/mm/yyyy"
                        type="text"
                      />
                      <svg
                        aria-hidden="true"
                        class="cds--date-picker__icon"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="height: 20px;"
            />
          </div>
        </div>
      </div>
      <div
        aria-busy="false"
        class="cds--modal-footer cds--btn-set"
      >
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
        <button
          class="cds--btn cds--btn--primary"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
    <span
      class="cds--visually-hidden"
      role="link"
      tabindex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;

exports[`SavePopup should render with Update Note when noteId is defined 1`] = `
<div>
  <div
    class="cds--layer-one cds--modal cds--modal-tall is-visible next-ui ot-notes-popup"
    role="presentation"
  >
    <span
      class="cds--visually-hidden"
      role="link"
      tabindex="0"
    >
      Focus sentinel
    </span>
    <div
      aria-modal="true"
      class="cds--modal-container"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="cds--modal-header"
      >
        <h2
          class="cds--modal-header__heading"
          dir="auto"
          id="cds--modal-header__heading--modal-id-:rc:"
        >
          Update Note
        </h2>
        <div
          class="cds--modal-close-button"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-label="Close"
                aria-labelledby="tooltip-:re:"
                class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="cds--modal-close__icon"
                  fill="currentColor"
                  focusable="false"
                  height="20"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-:re:"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Close
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
        id="cds--modal-body--modal-id-:rc:"
      >
        <div
          class="cds--form-item"
        >
          <div
            class="cds--text-area__label-wrapper"
          >
            <label
              class="cds--label"
              dir="auto"
            >
              Notes
            </label>
          </div>
          <div
            class="cds--text-area__wrapper"
          >
            <textarea
              aria-invalid="false"
              class="cds--text-area"
              placeholder="Enter a maximum of 150 characters"
              rows="4"
              style="width: 100%;"
            >
              notes for the day
            </textarea>
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-area__counter-alert"
              role="alert"
            />
          </div>
        </div>
        <div
          style="height: 20px;"
        />
        <div
          class="date-range"
        >
          <div>
            <div
              class="cds--form-item"
            >
              <div
                class="cds--date-picker cds--date-picker--single"
              >
                <div
                  class="cds--date-picker-container"
                >
                  <label
                    class="cds--label cds--label--disabled"
                    dir="auto"
                    for="date-picker-input-id-start"
                  >
                    Start date
                  </label>
                  <div
                    class="cds--date-picker-input__wrapper"
                  >
                    <span>
                      <input
                        class="cds--date-picker__input cds--date-picker__input--md flatpickr-input"
                        disabled=""
                        id="date-picker-input-id-start"
                        pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                        placeholder="dd/mm/yyyy"
                        type="text"
                      />
                      <svg
                        aria-hidden="true"
                        class="cds--date-picker__icon"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="height: 20px;"
            />
          </div>
          <div>
            <div
              class="cds--form-item"
            >
              <div
                class="cds--date-picker cds--date-picker--single"
              >
                <div
                  class="cds--date-picker-container"
                >
                  <label
                    class="cds--label cds--label--disabled"
                    dir="auto"
                    for="date-picker-input-id-finish"
                  >
                    End date
                  </label>
                  <div
                    class="cds--date-picker-input__wrapper"
                  >
                    <span>
                      <input
                        class="cds--date-picker__input cds--date-picker__input--md flatpickr-input"
                        disabled=""
                        id="date-picker-input-id-finish"
                        pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                        placeholder="dd/mm/yyyy"
                        type="text"
                      />
                      <svg
                        aria-hidden="true"
                        class="cds--date-picker__icon"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="height: 20px;"
            />
          </div>
        </div>
      </div>
      <div
        aria-busy="false"
        class="cds--modal-footer cds--btn-set"
      >
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
        <button
          class="cds--btn cds--btn--primary"
          type="button"
        >
          Update
        </button>
      </div>
    </div>
    <span
      class="cds--visually-hidden"
      role="link"
      tabindex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;
